--- a/style.css
+++ b/style.css
@@ -1,68 +1,59 @@
 /* Importa a fonte Open Sans do Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 
-/* Estilos Gerais */
-body {
-  font-family: 'Open Sans', sans-serif;
-  background-color: #ffffff;
+html, body {
   margin: 0;
   padding: 0;
-<<<<<<< Updated upstream
-  display: flex; /* Crie um flexbox para o corpo */
-  justify-content: center; /* Centraliza o chat horizontalmente */
-  align-items: center; /* Centraliza o chat verticalmente */
-  min-height: 100vh; /*  Define a altura mínima do corpo como 100% da viewport */
-=======
   height: 100%;
   width: 100%;
   font-family: 'Open Sans', sans-serif;
->>>>>>> Stashed changes
 }
 
-/* Container do Chat */
+/* Background pattern */
 .chat-container {
-  width: 100%; /* Ocupa 100% da largura disponível */
-  margin: 0; /* Remove as margens */
-  border-radius: 15px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  background-color: #fff; /* Adiciona cor de fundo */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #121212;
+  background-image: url('https://storage.typebot.live/typebot/public/workspaces/mathuza@gmail.com/typebots/clxgkbhjb006cegl854f2554c/background?v=1718482981767'), url('https://www.transparenttextures.com/patterns/cubes.png');
+  background-size: cover, contain;
+  background-repeat: no-repeat, repeat;
 }
 
-/* Barra Superior (Nome/Status) */
+/* Top bar (User Information) */
 .user-bar {
-  background-color: #20c997;
-  color: #ffffff;
-  padding: 15px 20px;
+  background-color: #0b141b;
+  color: #e9edef;
+  padding: 10px 20px;
   display: flex;
   align-items: center;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  position: relative;
 }
 
-.avatar {
-  width: 30px;
-  height: 30px;
+.user-bar .avatar {
+  width: 40px;
+  height: 40px;
   margin-right: 10px;
   border-radius: 50%;
   overflow: hidden;
 }
 
-.avatar img {
+.user-bar .avatar img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.name {
+.user-bar .name {
   font-weight: 600;
   font-size: 1.2em;
 }
 
-.status {
+.user-bar .status {
   font-size: 0.9em;
-<<<<<<< Updated upstream
-=======
   color: #00a884;
   margin-left: 5px;
   display: flex;
@@ -201,33 +192,22 @@ body {
   background-color: #00a884;
   border: none;
   border-radius: 50%;
->>>>>>> Stashed changes
   margin-left: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Área das Mensagens */
-.chat-box {
-  padding: 20px;
-  background-color: #ffffff;
-  overflow-y: auto;
-  height: calc(100vh - 80px); /* Ajuste a altura para caber o header e o input */
+.chat-input button img {
+  width: 20px;
+  height: 20px;
 }
 
-/* Estilos das Mensagens */
-.message {
-  margin-bottom: 15px;
-  position: relative;
-  clear: both;
-  animation: fadeIn 0.5s ease-in-out forwards;
+.chat-input button:hover {
+  background-color: #009172;
 }
 
-<<<<<<< Updated upstream
-.typebot-host-bubble {
-  background-color: #e5f5f0;
-  border: 1px solid #1db0a3;
-  color: #333;
-  padding: 12px 15px;
-=======
 /* Estilização para o contêiner do input */
 .input-container {
   display: flex;
@@ -246,149 +226,40 @@ body {
   flex-grow: 1; 
   padding: 10px;
   border: 1px solid #333;
->>>>>>> Stashed changes
   border-radius: 20px;
-  max-width: 80%;
-  float: left;
-  /* Adicionar sombra na caixa da mensagem */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
-}
-
-/* Triângulo do balão do Typebot */
-.typebot-host-bubble::before {
-  content: '';
-  position: absolute;
-  top: 15px;
-  left: -8px;
-  border-top: 8px solid transparent;
-  border-right: 8px solid #1db0a3;
-  border-bottom: 8px solid transparent;
-}
-
-.typebot-guest-bubble {
-  background-color: #ffffff;
-  padding: 12px 15px;
-  border-radius: 20px;
-  max-width: 80%;
-  float: right;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
-}
-
-/* Triângulo do balão do usuário */
-.typebot-guest-bubble::before {
-  content: '';
-  position: absolute;
-  top: 15px;
-  right: -8px;
-  border-top: 8px solid transparent;
-  border-left: 8px solid #ffffff;
-  border-bottom: 8px solid transparent;
-}
-
-/* Bolha de Mensagem (Reutilizável) com Animação */
-.bubble-typing {
-  display: inline-block;
-  padding: 8px 12px; 
-  border: 1px solid #1db0a3;
-  border-radius: 20px;
-  max-width: 80%;
-}
-
-/* Animação de digitação com pontos */
-.bubble-typing::after {
-  content: " .  .  .  ";
-  display: inline-block;
-  white-space: pre;
-  animation: typing 1s infinite linear;
-  visibility: hidden; /* Esconde os pontos por padrão */
-}
-
-.message.hide .bubble-typing::after {
-  visibility: visible; /* Mostra os pontos apenas durante a animação */
-}
-
-@keyframes typing {
-  0%, 33%, 66% { transform: translateY(0); }
-  100%, 50%, 83% { transform: translateY(-5px); }
-}
-
-/* Input e Botão */
-input[type="email"] {
-  width: 100%;
-  padding: 10px 15px;
-  border: 1px solid #ced4da;
-  border-radius: 25px;
   margin-right: 10px;
-  font-size: 1em;
-  box-sizing: border-box; /* Ajuste o tamanho para incluir padding e border */
+  font-size: 16px;
+  color: #e9edef;
+  background-color: #33383b;
 }
 
-button {
-  background-color: #20c997;
-  color: #ffffff;
+.styled-input::placeholder {
+  color: #868c90;
+}
+
+/* Estilização para o botão de envio */
+.styled-button {
+  width: 45px;
+  height: 45px;
+  background-color: #0b141b;
+  color: white;
   border: none;
-  padding: 10px 15px;
-  border-radius: 25px;
-  font-size: 1em;
+  border-radius: 50%;
   cursor: pointer;
-  transition: background-color 0.3s;
-  box-sizing: border-box; /* Ajuste o tamanho para incluir padding e border */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-button:hover {
-  background-color: #1db0a3;
+.styled-button:hover {
+  background-color: #0b141b;
 }
 
-/* Esconder Elementos */
-.hide {
-  display: none;
-  opacity: 0;
+.styled-button img {
+  width: 20px;
+  height: 20px;
 }
 
-<<<<<<< Updated upstream
-/* Animação de Fade-in para as mensagens */
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-/* Estilo para o container do input e botão */
-.chat-input {
-  padding: 20px;
-  background-color: #ffffff;
-  display: flex; /*  Crie um flexbox */
-  align-items: center; /* Centraliza verticalmente */
-}
-
-/* Estilos para a imagem dentro da mensagem */
-.bubble-typing img {
-  width: 100%; /* A imagem ocupa 100% da largura do bubble */
-  height: auto; /* A altura da imagem ajusta automaticamente para manter a proporção */
-  display: block;  /* A imagem se comporta como um bloco */
-  margin: 0 auto; /* Centraliza horizontalmente */
-}
-
-/* Responsividade para Mobile */
-@media (max-width: 600px) {
-  .typebot-host-bubble {
-    max-width: 90%; 
-    float: none; 
-    text-align: left; 
-  }
-
-  .typebot-guest-bubble {
-    max-width: 90%;
-    float: none;
-    text-align: right;
-  }
-
-  /* Centraliza o input e o botão */
-  input[type="email"], button {
-    display: block;
-    width: 100%; 
-    margin: 10px auto; 
-  }
-=======
 
 /* Estilização para o botão de resposta */
 .response-button {
@@ -401,10 +272,10 @@ button:hover {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
-  text-align: center; /* Centraliza o texto */
-  float: right; /* Posiciona o botão à direita */
-  clear: both; /* Evita que o botão flutue acima de outros elementos */
-  margin-bottom: 10px; /* Adiciona uma margem inferior para espaçamento */
+  text-align: center;
+  float: right; 
+  clear: both;
+  margin-bottom: 10px; 
 }
 
 .response-button:hover {
@@ -418,5 +289,4 @@ button:hover {
 .response-button:focus {
   outline: none;
   box-shadow: 0 0 0 2px rgba(0, 168, 132, 0.5);
->>>>>>> Stashed changes
 }
